# Online-dictionaries

./: README.md
Database/: CMakeLists.txt  Client  Client.c  Makefile  Server  Server.c  Tcp.c  Tcp.h  dict.txt  my.db
Database/readme/: 开发文档.md
